[package]
name = "mullet"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-rt = "0.2"
actix-server = "0.6"
tokio-tcp = "0.1"
actix-service = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
structopt = "0.3"
log = "0.4"
slog = "2.5"
slog-async = "2.3"
slog-term = "2.4"

[profile.release]
lto = true